steps towards fixing carousel (be patient pls)

--- a/Preparation_2/index.html
+++ b/Preparation_2/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
     <script src="https://kit.fontawesome.com/eb00f32ec1.js" crossorigin="anonymous"></script>
+    <script>ShowSlide-2()</script>
 </head>
 
 <body>
@@ -153,6 +154,8 @@
         <div class="carousel-container-2">
             <div class="carousel-2">
 
+                
+
                 <button class="car_button-2" id="prev-2" onclick="nextslide2(-1)">&#10094;</button>
                 <button class="car_button-2" id="next-2" onclick="nextslide2(1)">&#10095;</button>
 
@@ -160,32 +163,32 @@
 
                     <a href="book1.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <h1 class="bookinfo-2">360° ПРЕДИ КРАЯ</h1>
+                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
 
                     <a href="book1.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <h1 class="bookinfo-2">360° ПРЕДИ КРАЯ</h1>
+                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
 
                     <a href="book1.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <h1 class="bookinfo-2">360° ПРЕДИ КРАЯ</h1>
+                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
 
                     <a href="book1.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <h1 class="bookinfo-2">360° ПРЕДИ КРАЯ</h1>
+                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
 
                     <a href="book1.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <h1 class="bookinfo-2">360° ПРЕДИ КРАЯ</h1>
+                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
 
                     <a href="book1.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <h1 class="bookinfo-2">360° ПРЕДИ КРАЯ</h1>
+                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
 
                 </div>
@@ -194,32 +197,32 @@
 
                     <a href="book1.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <h1 class="bookinfo-2">360° ПРЕДИ КРАЯ</h1>
+                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
 
                     <a href="book1.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <h1 class="bookinfo-2">360° ПРЕДИ КРАЯ</h1>
+                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
 
                     <a href="book1.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <h1 class="bookinfo-2">360° ПРЕДИ КРАЯ</h1>
+                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
 
                     <a href="book1.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <h1 class="bookinfo-2">360° ПРЕДИ КРАЯ</h1>
+                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
 
                     <a href="book1.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <h1 class="bookinfo-2">360° ПРЕДИ КРАЯ</h1>
+                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
 
                     <a href="book1.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <h1 class="bookinfo-2">360° ПРЕДИ КРАЯ</h1>
+                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
                     
                 </div>
