fix borislav cod - pulni gluposti

--- a/Preparation_2/categ1.html
+++ b/Preparation_2/categ1.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="categ1.css">
     <script src="https://kit.fontawesome.com/eb00f32ec1.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
 
     <header>
@@ -18,8 +19,9 @@
 
         <h1 id="name" title="ReadHub">&nbsp;ReadHub</h1>
 
-       
-        <input type="text" placeholder="Search here" id="input_box" name="search"><div id="search_icon"><a><i class="fa-solid fa-magnifying-glass" ></i></a></div>
+
+        <input type="text" placeholder="Search here" id="input_box" name="search">
+        <div id="search_icon"><a><i class="fa-solid fa-magnifying-glass"></i></a></div>
 
 
 
@@ -44,42 +46,50 @@
     <section class="category">
         <div class="conteiner">
             <div class="bookpage">
-                <img class="snimka" src="photos-categ1/kniga1.jpg" >
+                <a href="bookpage.html">
+                    <img class="snimka img-size" src="photos-categ1/kniga1.jpg">
+                </a>
             </div>
             <div class="text">
                 <h3 id="zaglavie">360 градуса преди края</h3>
                 <p id="avtor">Автор: Силва Дончева</p>
-            </div>        
+            </div>
         </div>
 
         <div class="conteiner">
             <div class="bookpage">
-                <img class="snimka2" src="photos-categ1/kniga3.jpg">
+                <a href="bookpage.html">
+                    <img class="img-size" src="photos-categ1/kniga3.jpg">
+                </a>
             </div>
             <div class="text">
                 <h3 id="zaglavie2">Аз и морето</h3>
                 <p id="avtor">Автор: Петя Добарова</p>
-            </div>        
+            </div>
         </div>
 
         <div class="conteiner">
             <div class="bookpage">
-                <img class="snimka3" src="photos-categ1/kniga2.jpg" width="20%" height="10%">
+                <a href="bookpage.html">
+                    <img class="img-size" src="photos-categ1/kniga2.jpg">
+                </a>
             </div>
             <div class="text">
                 <h3 id="zaglavie3">Между Роднини</h3>
                 <p id="avtor3">Автор: Стана Апостолова</p>
-            </div>       
+            </div>
         </div>
 
         <div class="conteiner">
             <div class="bookpage">
-                <img class="snimka4" src="photos-categ1/kniga4.jpg">
+                <a href="bookpage.html">
+                    <img class="img-size" src="photos-categ1/kniga4.jpg">
+                </a>
             </div>
             <div class="text">
                 <h3 id="zaglavie4">Една Учителка</h3>
                 <p id="avtor">Автор: Иван Драганов</p>
-            </div>      
+            </div>
         </div>
 
     </section>
