--- a/Preparation_2/categ2.html
+++ b/Preparation_2/categ2.html
@@ -41,9 +41,12 @@
     <h1 class="bel">Английска литература</h1>
 
     <section class="category">
+
         <div class="conteiner">
             <div class="bookpage">
-                <img class="snimka" src="photos-categ2/kniga1.png">
+                <a href="bookpage.html">
+                <img class="img-size" src="photos-categ2/kniga1.png">
+            </a>
             </div>
             <div class="text">
                 <h3 id="zaglavie">Onyx Storm</h3>
@@ -53,7 +56,9 @@
 
         <div class="conteiner">
             <div class="bookpage">
-                <img class="snimka2" src="photos-categ2/kniga2-2.jpg">
+                <a href="bookpage.html">
+                <img class="img-size" src="photos-categ2/kniga2-2.jpg">
+            </a>
             </div>
             <div class="text">
                 <h3 id="zaglavie2">White Nights</h3>
@@ -63,7 +68,9 @@
 
         <div class="conteiner">
             <div class="bookpage">
-                <img class="snimka3" src="photos-categ2/kniga3-3.jpg" width="20%" height="10%">
+                <a href="bookpage.html">
+                <img class="img-size" src="photos-categ2/kniga3-3.jpg">
+            </a>
             </div>
             <div class="text">
                 <h3 id="zaglavie3">Berserk Deluxe</h3>
@@ -73,7 +80,9 @@
 
         <div class="conteiner">
             <div class="bookpage">
-                <img class="snimka4" src="photos-categ2/kniga4-4.jpg">
+                <a href="bookpage.html">
+                <img class="img-size" src="photos-categ2/kniga4-4.jpg">
+                </a>
             </div>
             <div class="text">
                 <h3 id="zaglavie4">Normal People</h3>
