--- a/Preparation_2/categ3.html
+++ b/Preparation_2/categ3.html
@@ -45,7 +45,9 @@
     <section class="category">
         <div class="conteiner">
             <div class="bookpage">
-                <img class="snimka" src="photos-categ3/kniga1.png" >
+                <a href="bookpage.html">
+                <img class="img-size" src="photos-categ3/kniga1.png" >
+                </a>
             </div>
             <div class="text">
                 <h3 id="zaglavie">Хрътката срещу хрътката</h3>
@@ -55,7 +57,9 @@
 
         <div class="conteiner">
             <div class="bookpage">
-                <img class="snimka2" src="photos-categ3/kniga2.png">
+                <a href="bookpage.html">
+                <img class="img-size" src="photos-categ3/kniga2.png">
+                </a>
             </div>
             <div class="text">
                 <h3 id="zaglavie2">Последна молитва</h3>
@@ -65,7 +69,9 @@
 
         <div class="conteiner">
             <div class="bookpage">
-                <img class="snimka3" src="photos-categ3/kniga3.png" width="20%" height="10%">
+                <a href="bookpage.html">
+                <img class="img-size" src="photos-categ3/kniga3.png" >
+                </a>
             </div>
             <div class="text">
                 <h3 id="zaglavie3">Дарена</h3>
@@ -75,10 +81,12 @@
 
         <div class="conteiner">
             <div class="bookpage">
-                <img class="snimka4" src="photos-categ3/kniga4.png">
+                <a href="bookpage.html">
+                <img class="img-size" src="photos-categ3/kniga4.png">
+                </a>
             </div>
             <div class="text">
-                <h3 id="zaglavie4">Високо</h3>
+                <h3 id="zaglavie4 img-size">Високо</h3>
                 <p id="avtor">Автор: Владимир Николов</p>
             </div>      
         </div>
