--- a/Preparation_2/index.html
+++ b/Preparation_2/index.html
@@ -55,7 +55,7 @@
 
 
                 <div class="slide" id="s1">
-                    <a href="book1.html" class="car_link">
+                    <a href="bookpage.html" class="car_link">
                         <img class="car_picture" title="book1" src="photos-categ1/kniga1.jpg">
                     </a>
                     <div class="bookinfo">
@@ -69,7 +69,7 @@
                 </div>
 
                 <div class="slide" id="s2">
-                    <a href="book1.html" class="car_link">
+                    <a href="bookpage.html" class="car_link">
                         <img class="car_picture" title="Между чука и наковалнята" src="photos-categ1/kniga2.jpg">
                     </a>
                     <div class="bookinfo">
@@ -82,7 +82,7 @@
                 </div>
 
                 <div class="slide" id="s3">
-                    <a href="book1.html" class="car_link">
+                    <a href="bookpage.html" class="car_link">
                         <img class="car_picture" title="wanna learn how to cry in bulgarian?! try this book ove yonder!"
                             src="photos-categ1/kniga3.jpg">
                     </a>
@@ -104,11 +104,11 @@
         </div>
 
         <div class="TOP-books">
-            <h1><b>Най-добрите ни предложения за тази седмица:</b></h1>
+            <h1><b>📖Най-добрите ни предложения за тази седмица:</b></h1>
 
             <section class="category">
 
-                <a href="kniga1.html" class="conteiner">
+                <a href="bookpage.html" class="conteiner">
                     <div class="bookpage">
                         <img class="snimka" src="photos-categ1/kniga1.jpg">
                     </div>
@@ -118,7 +118,7 @@
                     </div>
                 </a>
 
-                <a href="kniga2-2.html" class="conteiner">
+                <a href="bookpage.html" class="conteiner">
                     <div class="bookpage">
                         <img class="snimka" src="photos-categ2/kniga2-2.jpg">
                     </div>
@@ -128,7 +128,7 @@
                     </div>
                 </a>
 
-                <a href="kniga3-3.html" class="conteiner">
+                <a href="bookpage.html" class="conteiner">
                     <div class="bookpage">
                         <img class="snimka" src="photos-categ2/kniga3-3.jpg">
                     </div>
@@ -138,7 +138,7 @@
                     </div>
                 </a>
 
-                <a href="kniga4-4.html" class="conteiner">
+                <a href="bookpage.html" class="conteiner">
                     <div class="bookpage">
                         <img class="snimka" src="photos-categ2/kniga4-4.jpg">
                     </div>
@@ -161,32 +161,32 @@
 
                 <div class="slide-2" id="s1-2">
 
-                    <a href="book1.html" class="spammable-book">
+                    <a href="bookpage.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
                         <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
 
-                    <a href="book1.html" class="spammable-book">
+                    <a href="bookpage.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
                         <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
 
-                    <a href="book1.html" class="spammable-book">
+                    <a href="bookpage.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
                         <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
 
-                    <a href="book1.html" class="spammable-book">
+                    <a href="bookpage.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
                         <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
 
-                    <a href="book1.html" class="spammable-book">
+                    <a href="bookpage.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
                         <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
 
-                    <a href="book1.html" class="spammable-book">
+                    <a href="bookpage.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
                         <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
@@ -195,32 +195,32 @@
 
                 <div class="slide-2" id="s1-2">
 
-                    <a href="book1.html" class="spammable-book">
+                    <a href="bookpage.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
                         <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
 
-                    <a href="book1.html" class="spammable-book">
+                    <a href="bookpage.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
                         <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
 
-                    <a href="book1.html" class="spammable-book">
+                    <a href="bookpage.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
                         <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
 
-                    <a href="book1.html" class="spammable-book">
+                    <a href="bookpage.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
                         <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
 
-                    <a href="book1.html" class="spammable-book">
+                    <a href="bookpage.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
                         <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
 
-                    <a href="book1.html" class="spammable-book">
+                    <a href="bookpage.html" class="spammable-book">
                         <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
                         <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
