--- a/Preparation_2/signup.html
+++ b/Preparation_2/signup.html
@@ -4,27 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel = "stylesheet" href = "signup.css">
+    <link rel="stylesheet" href="signup.css">
     <script src="https://kit.fontawesome.com/eb00f32ec1.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class = "input-box">
+    <div class="input-box">
         <h1>Sign Up:</h1>
-        <div class = "info">
+        <div class="info">
             <i class="fa-solid fa-envelope"></i>
-            <input type = "email" placeholder = "Enter your email here">
+            <input type="email" id="email" placeholder="Enter your email here">
         </div>
-        <div class = "info">
+        <div class="info">
             <i class="fa-solid fa-user"></i>
-            <input type = "name" placeholder = "Enter an username">
+            <input type="text" id="username" placeholder="Enter a username">
         </div>
-        <div class = "info">
+        <div class="info">
             <i class="fa-solid fa-lock"></i>
-            <input type = "password" placeholder = "Enter a password">
+            <input type="password" id="password" placeholder="Enter a password">
         </div>
-        <div class = "submit-btn">
-            <button type = "submit">Sign Up</button>
+        <div class="submit-btn">
+            <button type="button" id="signup-btn">Sign Up</button>
         </div>
     </div>
+
+    <!-- Include the JavaScript file -->
+    <script src="signup.js"></script>
 </body>
 </html>
