bookpage - mnogo lo]o

--- a/Preparation_2/index.html
+++ b/Preparation_2/index.html
@@ -237,8 +237,7 @@
         <div class="section3">
             <h2><b>Добре дошли в нашата онлайн библиотека! 📚</b></h2>
 
-            <h2>Открийте безкраен свят от знания и вдъхновение с нашата дигитална библиотека. ткрийте безкраен свят от
-                знания и вдъхновение с нашата дигитална библиотека. Разглеждайте и четете книги от различни жанрове – от
+            <h2>Открийте безкраен свят от знания и вдъхновение с нашата дигитална библиотека. Разглеждайте и четете книги от различни жанрове – от
                 класическа литература до най-новите бестселъри. Достъпвайте любимите си заглавия по всяко време и от
                 всяко устройство.</h2>
             <h2>📖 Хиляди книги на един клик разстояние</h2>
