--- a/Preparation_2/bookpage.html
+++ b/Preparation_2/bookpage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book page</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="bookpage.css">
     <script src="https://kit.fontawesome.com/eb00f32ec1.js" crossorigin="anonymous"></script>
 </head>
 
@@ -38,6 +38,12 @@
         </a>
 
     </header>
+
+    <div class="container">
+
+
+
+    </div>
 
 
     <footer>
