Second sextuple Carousel completed with titles and headers!

--- a/Preparation_2/index.html
+++ b/Preparation_2/index.html
@@ -153,41 +153,39 @@
         <div class="carousel-container-2">
             <div class="carousel-2">
 
-                
-
                 <button class="car_button-2" id="prev-2" onclick="nextslide2(-1)">&#10094;</button>
                 <button class="car_button-2" id="next-2" onclick="nextslide2(1)">&#10095;</button>
 
                 <div class="slide-2" id="s1-2">
 
                     <a href="bookpage.html" class="spammable-book">
-                        <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
+                        <img class="car_picture-2" title="360° ПРЕДИ КРАЯ" src="photos-categ1/kniga1.jpg">
                         <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
                     </a>
 
                     <a href="bookpage.html" class="spammable-book">
-                        <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
+                        <img class="car_picture-2" title="Между Роднини" src="photos-categ1/kniga2.jpg">
+                        <p class="bookinfo-2">Между Роднини</p>
                     </a>
 
                     <a href="bookpage.html" class="spammable-book">
-                        <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
+                        <img class="car_picture-2" title="Стъпка по Стъпка" src="photos-categ1/kniga3.jpg">
+                        <p class="bookinfo-2">Стъпка по Стъпка</p>
                     </a>
 
                     <a href="bookpage.html" class="spammable-book">
-                        <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
+                        <img class="car_picture-2" title="Една Учителка" src="photos-categ1/kniga4.jpg">
+                        <p class="bookinfo-2">Една Учителка</p>
                     </a>
 
                     <a href="bookpage.html" class="spammable-book">
-                        <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
+                        <img class="car_picture-2" title="Onyx Storm" src="photos-categ2/kniga1-1.jpg">
+                        <p class="bookinfo-2">Onyx Storm</p>
                     </a>
 
                     <a href="bookpage.html" class="spammable-book">
-                        <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
+                        <img class="car_picture-2" title="White Nights" src="photos-categ2/kniga2-2.jpg">
+                        <p class="bookinfo-2">White Nights</p>
                     </a>
 
                 </div>
@@ -195,35 +193,37 @@
                 <div class="slide-2" id="s1-2">
 
                     <a href="bookpage.html" class="spammable-book">
-                        <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
+                        <img class="car_picture-2" title="Berserk" src="photos-categ2/kniga3-3.jpg">
+                        <p class="bookinfo-2">Berserk</p>
                     </a>
 
                     <a href="bookpage.html" class="spammable-book">
-                        <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
+                        <img class="car_picture-2" title="Yummy Fish" src="photos-categ2/kniga4-4.jpg">
+                        <p class="bookinfo-2">Sardine People</p>
                     </a>
 
                     <a href="bookpage.html" class="spammable-book">
-                        <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
+                        <img class="car_picture-2" title="Хрътката" src="photos-categ3/kniga1.png">
+                        <p class="bookinfo-2">Хрътката</p>
                     </a>
 
                     <a href="bookpage.html" class="spammable-book">
-                        <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
+                        <img class="car_picture-2" title="Последна Молитва" src="photos-categ3/kniga2.png">
+                        <p class="bookinfo-2">Последна Молитва</p>
                     </a>
 
                     <a href="bookpage.html" class="spammable-book">
-                        <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
+                        <img class="car_picture-2" title="Високо" src="photos-categ3/kniga4.png">
+                        <p class="bookinfo-2">Високо</p>
                     </a>
 
                     <a href="bookpage.html" class="spammable-book">
-                        <img class="car_picture-2" title="book1" src="photos-categ1/kniga1.jpg">
-                        <p class="bookinfo-2">360° ПРЕДИ КРАЯ</p>
+                        <img class="car_picture-2"
+                            title="Благодарим на онлайн библиотека Сиела за възможността да плагиратстваме от техния дървен сайт"
+                            src="photos-categ3/kniga3.png">
+                        <p class="bookinfo-2">Дарена от Сиела</p>
                     </a>
-                    
+
                 </div>
 
                 <div class="box-navbutt-2">
