--- a/public/signup.html
+++ b/public/signup.html
@@ -28,6 +28,6 @@
     </div>
 
     <!-- Include the JavaScript file -->
-    <script src="signup.js"></script>
+    <script src="/js/signup.js"></script>
 </body>
 </html>
