--- a/public/signup.html
+++ b/public/signup.html
@@ -8,12 +8,9 @@
     <script src="https://kit.fontawesome.com/eb00f32ec1.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <script src="/js/signup.js"></script>
     <div class="input-box">
         <h1>Sign Up:</h1>
-        <div class="info">
-            <i class="fa-solid fa-envelope"></i>
-            <input type="email" id="email" placeholder="Enter your email here">
-        </div>
         <div class="info">
             <i class="fa-solid fa-user"></i>
             <input type="text" id="username" placeholder="Enter a username">
@@ -22,12 +19,11 @@
             <i class="fa-solid fa-lock"></i>
             <input type="password" id="password" placeholder="Enter a password">
         </div>
-        <div class="submit-btn">
+        <div class="submit-btn" id = "signup-btn">
             <button type="button" id="signup-btn">Sign Up</button>
         </div>
     </div>
 
     <!-- Include the JavaScript file -->
-    <script src="/js/signup.js"></script>
 </body>
 </html>
