--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ReadHub</title>
-    <link rel="stylesheet" href="../public/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
     <script src="index.js"></script>
     <script src="https://kit.fontawesome.com/eb00f32ec1.js" crossorigin="anonymous"></script>
 </head>
