--- a/public/bookpage.html
+++ b/public/bookpage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book page</title>
-    <link rel="stylesheet" href="../public/css/bookpage.css">
+    <link rel="stylesheet" href="css/bookpage.css">
     <script src="https://kit.fontawesome.com/eb00f32ec1.js" crossorigin="anonymous"></script>
 </head>
 
