--- a/public/categ3.html
+++ b/public/categ3.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0">
     <title>Bestsellers</title>
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href=css/categ1.css">
+    <link rel="stylesheet" href="css/categ1.css">
     <script src="https://kit.fontawesome.com/eb00f32ec1.js" crossorigin="anonymous"></script>
 </head>
 
