--- a/public/signup.html
+++ b/public/signup.html
@@ -19,11 +19,9 @@
             <i class="fa-solid fa-lock"></i>
             <input type="password" id="password" placeholder="Enter a password">
         </div>
-        <div class="submit-btn" id = "signup-btn">
+        <div class="submit-btn">
             <button type="button" id="signup-btn">Sign Up</button>
         </div>
     </div>
-
-    <!-- Include the JavaScript file -->
 </body>
 </html>
