--- a/public/index.html
+++ b/public/index.html
@@ -35,11 +35,18 @@
             </div>
         </div>
 
-        <a href="profile.html">
-            <button class="profile"><i class="fa-solid fa-user"></i></button>
-        </a>
+            <button class="profile" id="profileBtn"><i class="fa-solid fa-user"></i></button>
 
     </header>
+
+    <div id="sidebar" class="sidebar">
+        <button id="closeSidebar" class="close-btn">✖</button>
+        <h2>Потребителски профил</h2>
+        <p><strong>Име:</strong> Иван Петров</p>
+        <p><strong>Дата на първо логване:</strong> 12.02.2024</p>
+        <p><strong>Описание:</strong> Любител на книгите 📚</p>
+        <button class="logout-btn">Log out</button>
+    </div>
 
     <div class="home_page">
 
