--- a/public/categ3.html
+++ b/public/categ3.html
@@ -27,9 +27,9 @@
         <div class="dropdown">
             <button class="dropdown_button" type="button"><b>Categories</b></button>
             <div class="dropdown-content">
-                <a href="categ1.html"><b>Bulgarian books</b></a>
-                <a href="categ2.html"><b>Foreign books</b></a>
-                <a href="categ3.html"><b>Bestselers</b></a>
+                <a href="http://localhost:7000/categ1"><b>Bulgarian books</b></a>
+                <a href="http://localhost:7000/categ2"><b>Foreign books</b></a>
+                <a href="http://localhost:7000/categ3"><b>Bestselers</b></a>
             </div>
         </div>
 
@@ -183,8 +183,8 @@
             <p>email: ReadHub@gmail.com</p>
             <p>Legends enterprises<sup>®</sup></p>
             <div id="info2">
-                <a class="footerlink" href="login.html"><b>Login</b>&nbsp;&nbsp;&nbsp;</a>
-                <a class="footerlink" href="signup.html"><b>Sign Up</b></a>
+                <a class="footerlink" href="http://localhost:7000/login"><b>Login</b>&nbsp;&nbsp;&nbsp;</a>
+                <a class="footerlink" href="http://localhost:7000/signup"><b>Sign Up</b></a>
             </div>
         </div>
         <div id="info3">
@@ -196,5 +196,3 @@
     </footer>
 
 </body>
-
-</html>
