--- a/public/index.html
+++ b/public/index.html
@@ -29,24 +29,17 @@
         <div class="dropdown">
             <button class="dropdown_button" type="button"><b>Categories</b></button>
             <div class="dropdown-content">
-                <a href="categ1.html"><b>Bulgarian books</b></a>
-                <a href="categ2.html"><b>Foreign books</b></a>
-                <a href="categ3.html"><b>Bestsellers</b></a>
+                <a href="http://localhost:7000/categ1"><b>Bulgarian books</b></a>
+                <a href="http://localhost:7000/categ2"><b>Foreign books</b></a>
+                <a href="http://localhost:7000/categ3"><b>Bestsellers</b></a>
             </div>
         </div>
 
-            <button class="profile" id="profileBtn"><i class="fa-solid fa-user"></i></button>
+        <a href="profile.html">
+            <button class="profile"><i class="fa-solid fa-user"></i></button>
+        </a>
 
     </header>
-
-    <div id="sidebar" class="sidebar">
-        <button id="closeSidebar" class="close-btn">✖</button>
-        <h2>Потребителски профил</h2>
-        <p><strong>Име:</strong> Иван Петров</p>
-        <p><strong>Дата на първо логване:</strong> 12.02.2024</p>
-        <p><strong>Описание:</strong> Любител на книгите 📚</p>
-        <button class="logout-btn">Log out</button>
-    </div>
 
     <div class="home_page">
 
@@ -255,13 +248,13 @@
 
     <footer>
         <div id="navi">
-            <h3><a href="index.html" id="footer_button" title="Back to home.">ReadHub</a></h3>
+            <h3><a href="http://localhost:7000/" id="footer_button" title="Back to home.">ReadHub</a></h3>
 
-            <h3><a href="categ1.html" id="footer_button" title="The classic is the best.">Bulgarian books</a></h3>
+            <h3><a href="http://localhost:7000/categ1" id="footer_button" title="The classic is the best.">Bulgarian books</a></h3>
 
-            <h3><a href="categ2.html" id="footer_button" title="Try something new,">English books</a></h3>
+            <h3><a href="http://localhost:7000/categ2" id="footer_button" title="Try something new,">English books</a></h3>
 
-            <h3><a href="categ3.html" id="footer_button" title="Aur best offers.">Bestsellers</a></h3>
+            <h3><a href="http://localhost:7000/categ3" id="footer_button" title="Aur best offers.">Bestsellers</a></h3>
         </div>
         <div id="info">
             <p id="FormalityMessage">Copyright © 2025, All Rights Reserved</p>
@@ -269,8 +262,8 @@
             <p>email: ReadHub@gmail.com</p>
             <p>Legends enterprises<sup>®</sup></p>
             <div id="info2">
-                <a class="footerlink" href="login.html"><b>Login</b>&nbsp;&nbsp;&nbsp;</a>
-                <a class="footerlink" href="signup.html"><b>Sign Up</b></a>
+                <a class="footerlink" href="http://localhost:7000/login"><b>Login</b>&nbsp;&nbsp;&nbsp;</a>
+                <a class="footerlink" href="http://localhost:7000/signup"><b>Sign Up</b></a>
             </div>
         </div>
         <div id="info3">
