--- a/public/categ2.html
+++ b/public/categ2.html
@@ -25,9 +25,9 @@
         <div class="dropdown">
             <button class="dropdown_button" type="button"><b>Categories</b></button>
             <div class="dropdown-content">
-                <a href="categ1.html"><b>Bulgarian books</b></a>
-                <a href="categ2.html"><b>Foreign books</b></a>
-                <a href="categ3.html"><b>Bestselers</b></a>
+                <a href="http://localhost:7000/categ1"><b>Bulgarian books</b></a>
+                <a href="http://localhost:7000/categ2"><b>Foreign books</b></a>
+                <a href="http://localhost:7000/categ3"><b>Bestselers</b></a>
             </div>
         </div>
 
@@ -168,13 +168,13 @@
 
     <footer>
         <div id="navi">
-            <h3><a href="index.html" id="footer_button" title="Back to home.">ReadHub</a></h3>
+            <h3><a href="http://localhost:7000/" id="footer_button" title="Back to home.">ReadHub</a></h3>
 
-            <h3><a href="categ1.html" id="footer_button" title="The classic is the best.">Bulgarian books</a></h3>
+            <h3><a href="http://localhost:7000/categ1" id="footer_button" title="The classic is the best.">Bulgarian books</a></h3>
 
-            <h3><a href="categ2.html" id="footer_button" title="Try something new,">English books</a></h3>
+            <h3><a href="http://localhost:7000/categ2" id="footer_button" title="Try something new,">English books</a></h3>
 
-            <h3><a href="categ3.html" id="footer_button" title="Aur best offers.">Bestsellers</a></h3>
+            <h3><a href="http://localhost:7000/categ3" id="footer_button" title="Aur best offers.">Bestsellers</a></h3>
         </div>
         <div id="info">
             <p id="FormalityMessage">Copyright © 2025, All Rights Reserved</p>
@@ -182,8 +182,8 @@
             <p>email: ReadHub@gmail.com</p>
             <p>Legends enterprises<sup>®</sup></p>
             <div id="info2">
-                <a class="footerlink" href="login.html"><b>Login</b>&nbsp;&nbsp;&nbsp;</a>
-                <a class="footerlink" href="signup.html"><b>Sign Up</b></a>
+                <a class="footerlink" href="http://localhost:7000/login"><b>Login</b>&nbsp;&nbsp;&nbsp;</a>
+                <a class="footerlink" href="http://localhost:7000/signup"><b>Sign Up</b></a>
             </div>
         </div>
         <div id="info3">
