Display user info

--- a/public/index.html
+++ b/public/index.html
@@ -272,8 +272,8 @@
             <p>email: ReadHub@gmail.com</p>
             <p>Legends enterprises<sup>®</sup></p>
             <div id="info2">
-                <a class="footerlink" href="http://localhost:7000/login"><b>Login</b>&nbsp;&nbsp;&nbsp;</a>
-                <a class="footerlink" href="http://localhost:7000/signup"><b>Sign Up</b></a>
+                <a class="footerlink" id = "loginButton" href="http://localhost:7000/login"><b>Login</b>&nbsp;&nbsp;&nbsp;</a>
+                <a class="footerlink" id = "signupButton" href="http://localhost:7000/signup"><b>Sign Up</b></a>
             </div>
         </div>
         <div id="info3">
