--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,8 @@
                 <a href="http://localhost:7000/categ3"><b>Bestsellers</b></a>
             </div>
         </div>
-
+        <a href = "http://localhost:7000/login"><button class = "login" id = "loginButton1">Login</button></a>
+        <a href = "http://localhost:7000/signup"><button class = "signup" id = "signupButton1">Signup</button></a>
         <button class="profile" id="profileButton"><i class="fa-solid fa-user"></i></button>
 
     </header>
