--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
 
         <div class="dropdown">
-            <button class="dropdown_button" type="button"><b>Categories</b></button>
+            <button class="dropdown_button" type="button" id="dropdown"><b>Categories</b></button>
             <div class="dropdown-content">
                 <a href="http://localhost:7000/categ1"><b>Bulgarian books</b></a>
                 <a href="http://localhost:7000/categ2"><b>Foreign books</b></a>
