--- a/public/categ2.html
+++ b/public/categ2.html
@@ -32,6 +32,8 @@
             </div>
         </div>
 
+        <a href = "http://localhost:7000/login"><button class = "login" id = "loginButton1">Login</button></a>
+        <a href = "http://localhost:7000/signup"><button class = "signup" id = "signupButton1">Signup</button></a>
         <button class="profile" id="profileButton"><i class="fa-solid fa-user"></i></button>
 
     </header>
